<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior=".ui.behaviors.UserInfoBehavior"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_larger_72"
        android:background="@color/gray_lighter"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_small_8"
        android:paddingTop="@dimen/spacing_small_8"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_rate_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="@dimen/spacing_huge_40"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/codelines_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_string_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_strings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="@dimen/spacing_huge_40"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/projects_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_projects_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/user_projects"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal_15"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>