<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/corner_radius_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo_img_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/userphoto"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name_txt_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@string/ff_medium"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal_14"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_txt_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Рейтинг"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_txt_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Написано строк кода"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/project_count_txt_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Проектов"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/about_txt_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/ff_regular"
            android:maxLines="3"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:text="@string/user_bio"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/font_normal_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/grey_light"/>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:text="Просмотр"
            android:textColor="@color/color_accent"
            />
    </LinearLayout>

</android.support.v7.widget.CardView>